fix double scroll issue on newsfeed

--- a/react-app/src/components/MainFeedPage/index.css
+++ b/react-app/src/components/MainFeedPage/index.css
@@ -1,10 +1,10 @@
 .main-page-container {
     background-image: url("../../images/galaxy-background.jpg");
-    background-size: cover;
+    background-size: auto;
     width: 100%;
-    height: 92.5vh;
+
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    overflow-y: scroll;
+    
 }
